--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
         
             <fieldset> 
                 <legend >About Me</legend>
-                <p>Age 25 bla bla bla</p>
+                <h3> Fifth-semester Global Business Engineering student seeking tech job opportunities to apply and advance my skills.</h3>
+                <li> Vestre Ringgade 46, 3th. 8000 Aarhus, Denmark</li>
+                <li> +45 31 10 74 40</li>
+                <li> DoB: 9th of June 1998</li>
             </fieldset>
             <fieldset> 
                 <legend>Education</legend>
@@ -45,11 +48,13 @@
             <fieldset>
                 <legend>Technical Skills</legend>
             <ul>
-                <li> HTML</li>
-                <li> HTML</li>
-                <li> HTML</li>
-                <li> HTML</li>
-                <li> HTML</li>
+                <li> Java (Intermediate)</li>
+                <li> PostgreSQL(Intermediate)</li>
+                <li> Python (Intermediate)</li>
+                <li> JavaScript (Beginner)</li>
+                <li> HTML5 (Beginner)</li>
+                <li> CSS3 (Beginner)</li>
+                <li> SAP BC400 (Beginner)</li>
             </ul>
             </fieldset>
 
@@ -57,21 +62,25 @@
                 <legend> Prior Experience</legend>
                 <h2>Zleep Aarhus Skejby </h2>
                 <h3>Receptionist/Host - 2021-2023</h3>
-                <p>During my time bla bla bla</p>
-                <h2>Zleep Aarhus Skejby </h2>
-                <h3>Receptionist/Host - 2021-2023</h3>
-                <p>During my time bla bla bla</p>
-                <h2>Zleep Aarhus Skejby </h2>
-                <h3>Receptionist/Host - 2021-2023</h3>
-                <p>During my time bla bla bla</p>
+                <p>"During my time at Zleep Hotel Aarhus Skejby, I gained a diverse skill set. 
+                    This experience enhanced my leadership skills as I often worked independently and had to take full responsibility for my actions. 
+                    It also improved my customer service abilities, enabling me to effectively address and resolve issues as they arose".</p>
+                <h2>PostNord </h2>
+                <h3>Production Worker - 2017-2019</h3>
+                <p>"While working at PostNord I gained a lot of experience working in an intense and competitive environment."</p>
             </fieldset>
 
             <fieldset>
                 <legend>Projects</legend>
                 <h3>Marketing Research Calculator</h3>
-                <p> bla bla bla</p>
+                <p> During the third semester project, I had the responsibility of creating an application which could give the user 
+                    a quick and easy overview of a selected country’s score based on relevant factors in market attractiveness and the company’s own competitive strengths. 
+                    The application was created using JavaFX. This application was used in order to establish a business plan for a company which we worked with through the project
+                     which goal was to emerge into new markets possibilities primarily the US, Japan and China. </p>
                 <h3>Solar Energy Management Application and Investment Assesment</h3>
-                <p> bla bla bla </p>
+                <p> Creating a database and solar panel monitoring system/application which aim was to easily monitor the input for any errors of each panel, output and efficiency of the solar panels. 
+                    The application was created to store these data into a database where the user could monitor the output throughout a specific time period. 
+                    During the project I also helped develop an investment plan of solar panels which would cover the potential efficiency, savings and costs for the company. </p>
             </fieldset>
 
 
