--- a/about.html
+++ b/about.html
@@ -15,10 +15,60 @@
             <a href="Education.html">My Education</a>
             <a href="https://github.com/fredboysen"> <i class="fa-brands fa-github"></i> </a>
             <a href="https://www.linkedin.com/in/fredwerb/"> <i class="fa-brands fa-linkedin"></i> </a>
-            <a href="mailto:frebo@live.dk"> <i class="fa-solid fa-envelope"></i></a>
-            <a id="download" href="images/CV_En.pdf" download> <i class="fa-solid fa-download"></i> </a>
+            <a href="mailto:316997@via.dk"> <i class="fa-solid fa-envelope"></i></a>
+            <a id="download" href="images/CV_En.pdf" download>  <i class="fa-solid fa-download"></i> </a>
+
         </nav>
     
     </header>
+
+    <div class="about-content"> 
+
+    <fieldset> 
+        <legend> Younger years</legend>
+        <p>  </p>
+
+    
+    <div id="video">
+        <legend> Growing up in Fredericia</legend>
+        <video autoplay loop src="Videos/Fredericia.mp4" type="video/mp4"> </video>
+        <ul> Born and raised in Fredericia, lived in the northern part of town with my parents and bigger sister close to nature, 
+            club activities and insitutions.
+        </ul>
+    </div>
+</fieldset>
+
+<fieldset>
+    <legend> Midtjysk Efterskole </legend>
+    <img id="about-img" src="Images/midtjysk.png" alt="mje">
+    <ul>In the year 2014 till 2015 i had the pleasure of attending Midtjysk Efterskole which is a one year boarding school.
+        During my time at MJE i  </ul>
+</fieldset>
+
+<fieldset>
+    <legend> International Business College </legend>
+    <img id="about-img" src="Images/IBC.png" alt="mje">
+    <ul> </ul>
+</fieldset>
+
+    <fieldset> 
+        <legend> Aarhus </legend>
+        <p> In the year 2021, shortly after the lockdown due to the covid-19 pandemic i moved to Aarhus to start my educational journey.
+            My life in Aarhus has 
+        </p>
+    </fieldset>
+
+    <fieldset> <legend>Hobbies</legend>  
+    <ul>
+        <li>Weightlifting </li>
+        <li>Gaming</li>
+        <li> Boardgames </li>
+        <li> Cooking </li>
+        <p> shhshs</p>
+    </ul>
+
+    </fieldset>
+
+</div>
 </body>
 </html>
