--- a/Education.html
+++ b/Education.html
@@ -31,14 +31,14 @@
             <a href="https://en.via.dk/programmes/bachelor/global-business-engineering"> 
                 <img src="images/Vialogo.jpg" alt="VIA"></a>
         </div>
-        <fieldset> <legend>  <h2>VIA University College</h2></legend>
+        <fieldset> <legend>  VIA University College</legend>
             <h3>VIA University College is a university college organisation in Central Denmark Region, Denmark, established in January 2008. It is present in the region with a total of eight campuses.</h3>
             </fieldset> 
 
 
     <fieldset>
         <legend>
-        <h2>Global Business Engineering</h2>
+        Global Business Engineering
 </legend>
         <p>  "A comprehensive program which combines business courses in Marketing, Economics and 
             Communications with technical courses such as Java development, Web development, SAP 
@@ -51,7 +51,7 @@
 
     <fieldset> 
         <legend>
-            <h2> Three Reasons VIA was the right choice for me:</h2>
+            Three Reasons VIA was the right choice for me:
         </legend>
             <ul>1. Hands on learning</ul>
             <p> "The structure of the courses are focused around hands on learning   
@@ -67,8 +67,8 @@
  <!-- Embedding location of university from google maps on weppage-->
        
  <fieldset><legend> My Campus Location </legend>     
- <h2> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2238.9500575095435!2d9.832650531790492!3d55.863532903619685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464c63be87e17d19%3A0xa65113d28ba174ba!2sVIA%20University%20Campus%20Horsens!5e0!3m2!1sen!2sdk!4v1696260596890!5m2!1sen!2sdk" width="600" height="450" style="border:0;" 
-    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></h2> 
+   <iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2238.9500575095435!2d9.832650531790492!3d55.863532903619685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464c63be87e17d19%3A0xa65113d28ba174ba!2sVIA%20University%20Campus%20Horsens!5e0!3m2!1sen!2sdk!4v1696260596890!5m2!1sen!2sdk" width="600" height="450" style="border:0;" 
+    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </fieldset>
 </div>
            
