--- a/Education.html
+++ b/Education.html
@@ -66,10 +66,11 @@
 
  <!-- Embedding location of university from google maps on weppage-->
        
- <fieldset><legend> My Campus Location </legend>     
+ <fieldset><legend> My Campus Location </legend> 
+    <div id="mapVIA">     
    <iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2238.9500575095435!2d9.832650531790492!3d55.863532903619685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464c63be87e17d19%3A0xa65113d28ba174ba!2sVIA%20University%20Campus%20Horsens!5e0!3m2!1sen!2sdk!4v1696260596890!5m2!1sen!2sdk" width="600" height="450" style="border:0;" 
     allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</fieldset>
+</div></fieldset>
 </div>
            
 
