--- a/about.html
+++ b/about.html
@@ -26,8 +26,7 @@
     <div id="about-content"> 
 
     <fieldset> 
-        <legend> Younger years</legend>
-        <p>  </p>
+        <legend> Upbringing</legend>
 
     <!-- Adding video to page which autoplays in a loop implementing class video to reuse on other elements -->
     <div class="video">
